# xchange

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  Makefile  README.md  _config.yml  build.mk  config.mk  index.md
.github/workflows/: analyze.yml  build-cmake.yml  build.yml  cmake.yml  dox.yml  example.yml  gnu.yml  indexnow.yml  install.yml  test.yml
_includes/: head-custom.html
apidoc/: xchange.tag
apidoc/html/: annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen.css  doxygen_crawl.html  files.html  functions.html  functions_vars.html  globals.html  globals_b.html  globals_defs.html  globals_dup.js  globals_e.html  globals_f.html  globals_func.html  globals_i.html  globals_l.html  globals_m.html  globals_n.html  globals_s.html  globals_t.html  globals_type.html  globals_vars.html  globals_x.html  index.html  index.js  md_CHANGELOG.html  md_CONTRIBUTING.html  menudata.js  navtreedata.js  navtreeindex0.js  navtreeindex1.js  pages.html  plugin.xml  structXField.html  structXField.js  structXLookupTable.html  structXStructure.html  (+15 more)
cmake/: xchange.pc.in  xchangeConfig.cmake.in
doc/: .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  Makefile  README-undecorated.md  README.md  docedit
examples/: .gitignore  CMakeLists.txt  Makefile
include/: xchange.h  xmutex.h
resources/: analytics.html
src/: CMakeLists.txt  xchange.c  xjson.c  xlookup.c  xstruct.c
test/: .gitignore  CMakeLists.txt  Makefile  test-json.c
(+56 files in other folders)
